# mtg-match-tracker

./: README.md  pyproject.toml
backend/: makefile  manage.py
backend/mtg_deck_track/: asgi.py  settings.py  urls.py
backend/tracker/: models.py
backend/tracker/admin/: form_fields.py
backend/tracker/management/commands/: import_cards_from_json.py
backend/tracker/migrations/: 0005_alter_game_game_notes.py  0012_archetype_deck_archetype_opponentdeck__archetype.py
backend/tracker/tests/utils/: test_deck_parser.py
backend/tracker/utils/: deck_parser.py
frontend/templates/: home.html
frontend/views/: home.py
mtg_deck_track/: settings.py  urls.py
mtg_deck_track/mtg_deck_track/: wsgi.py
mtg_deck_track/tracker/: forms.py  models.py
mtg_deck_track/tracker/admin/: __init__.py  deck.py  form_fields.py  match.py
mtg_deck_track/tracker/migrations/: 0001_initial.py  0002_deck_format.py  0003_delete_archetype_alter_deck_owner.py  0004_match_event.py  0007_opponentdeck_remove_match_opponent_deck_and_more.py  0008_opponentdeck_player.py  0010_alter_match_opponent_deck.py  0011_rename_name_opponentdeck_archetype_and_more.py  0013_remove_opponentdeck_archetype.py  0016_alter_game_game_number_alter_game_opponent_mulligans_and_more.py
tracker/: models.py
tracker/admin/: deck.py  match.py
tracker/migrations/: 0006_game_game_number_alter_game_game_notes.py  0009_remove_match_opponent_deck_1_match_opponent_deck.py  0014_rename__archetype_opponentdeck_archetype.py  0015_alter_opponentdeck_archetype.py  0017_alter_deck_maindeck_alter_deck_sideboard.py
