[tool.poetry]
name = "mtg-deck-track"
version = "0.1.0"
description = "App to track a magic deck and its results"
authors = ["Thiago Sant Helena <21184066+shthiago@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.9"
flake8 = "^4.0.1"
black = "^22.3.0"
bandit = "^1.7.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
